Add bordify styles [#154385444]

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -609,6 +609,26 @@ body.partners.has-subnav {
 }
 
 
+// Bordify images
+main.content {
+  img {
+      outline: 1px solid black;
+      outline-offset: -1px;
+
+  }
+  .title-container img {
+      outline: 0px;
+      outline-offset: 0px;
+  }
+  .no-border {
+    outline: none;
+    outline-offset: 0;
+    border: none;
+  }
+}
+
+
+// Anchor scroll offset
 @media (min-width: 700px) {
   h2 > a:before,
   h3 > a:before {
