--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -608,6 +608,22 @@ body.partners.has-subnav {
   }
 }
 
+// For search box (copied from PUI v13)
+
+input:not([type]) {
+  display: block;
+  width: 100%;
+  height: 32px;
+  padding: 4px 8px;
+  font-size: 14px;
+  background-color: #fff;
+  border: 1px solid #dfe5e8;
+  border-radius: 2px;
+  box-shadow: none;
+  box-sizing: border-box;
+  color: #243641;
+}
+
 
 // Bordify images
 main.content {
