--- a/source/layouts/_local-header.erb
+++ b/source/layouts/_local-header.erb
@@ -1,15 +1,16 @@
 <% if product_info['use_local_header'] %>
+<div role="banner" aria-label="<%= product_info['local_header_title'] %> product">
   <div class="local-header title-container">
     <div class="local-header version-info">
       LATEST VERSION: <%= product_info['latest_stable_version'] %> - <a href="<%= product_info['changelog_href'] %>">RELEASE NOTES</a>
     </div>
     <div class="local-header local-title clearfix">
-      <img src="<%= product_info['local_header_img'] %>">
+      <img src="<%= product_info['local_header_img'] %>" alt="">
       <span class="local-header-title"><%= product_info['local_header_title'] %>
       </span>
       <span onClick="return true" class="local-header local-version header-dropdown">
         <a class="local-header header-dropdown-link">v<%= product_info['local_product_version'] || product_info['latest_stable_version'] %></a>
-        <span class="local-header header-dropdown-content">
+        <div class="local-header header-dropdown-content">
           <ul>
             <% if product_info['local_header_version_list'] %>
               <% product_info['local_header_version_list'].each do |version| %>
@@ -23,15 +24,16 @@
               <% end %>
             <% end %>
           </ul>
-        </span>
+        </div>
       </span>
 
       <!-- search was here -->
     </div>
-    <div class="local-header local-header-links">
+    <nav class="local-header local-header-links">
       <% product_info['local_header_links'].each do |link| %>
         <%= link %>
       <% end %>
-    </div>
+    </nav>
   </div>
+</div>
 <% end %>
