--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <!-- Always force latest IE rendering engine or request Chrome Frame -->
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-
+  <!-- Instruct robots to skip indexing -->
+  <meta name="robots" content="noindex">
   <%= vars.html_head_meta %>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400italic,400,600' rel='stylesheet' type='text/css'>
   <!-- Use title if it's in the page YAML frontmatter -->
