Add Google Tag Manager for Analytics purposes [#167306425]

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,6 +7,13 @@
   <!-- Instruct robots to skip indexing -->
   <meta name="robots" content="noindex">
   <%= vars.html_head_meta %>
+    <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W7KKZ3H');</script>
+  <!-- End Google Tag Manager -->
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400italic,400,600' rel='stylesheet' type='text/css'>
   <!-- Use title if it's in the page YAML frontmatter -->
   <title>
@@ -25,6 +32,10 @@
 </head>
 
 <body class="<%= body_classes %><%= yield_for_subnav.empty? ? '' : ' has-subnav' %>">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W7KKZ3H"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
 <div class="viewport">
   <div class='wrap'>
