--- a/source/layouts/_local-header.erb
+++ b/source/layouts/_local-header.erb
@@ -1,12 +1,9 @@
 <% if product_info['use_local_header'] %>
   <div class="local-header title-container">
-    <div class="local-header version-info">
-      LATEST VERSION: <%= product_info['latest_stable_version'] %> - <a href="<%= product_info['changelog_href'] %>">RELEASE NOTES</a>
-    </div>
     <div class="local-header local-title clearfix">
-      <img src="<%= product_info['local_header_img'] %>">
-      <span class="local-header-title"><%= product_info['local_header_title'] %>
-      </span>
+      <div class='img-container'><img src="<%= product_info['local_header_img'] %>"></div>
+      <span class="local-header-title"><%= product_info['local_header_title'] %></span>
+      <% if product_info['latest_stable_version'] == product_info['local_product_version'] %>LATEST<% end %>
       <span onClick="return true" class="local-header local-version header-dropdown">
         <a class="local-header header-dropdown-link">v<%= product_info['local_product_version'] || product_info['latest_stable_version'] %></a>
         <span class="local-header header-dropdown-content">
@@ -27,11 +24,6 @@
       </span>
 
       <!-- search was here -->
-    </div>
-    <div class="local-header local-header-links">
-      <% product_info['local_header_links'].each do |link| %>
-        <%= link %>
-      <% end %>
     </div>
   </div>
 <% end %>
