--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -108,7 +108,6 @@ category: basics
 .content .panel a:hover {
   background: $color-bg-panel;
   border-bottom-color: darken(#ecefef, 5%);
-  // border-left-color: $color-accent-bright;
   .action {
     color: $color-text;
   }
@@ -583,47 +582,92 @@ hr {
 
 .has-subnav {
   @media (min-width: $bp-medium) {
-    .nav-container {
-      top: 100px;
-    }
     .content-layout {
-      padding: 3.5em 2em;
+      display: inline-block;
+      vertical-align: top;
+      margin-left: 15em;
+      margin-top: 110px;
+      max-width: 48em;
     }
   }
 }
 
-body.partners.has-subnav {
-  @media (min-width: $bp-medium) {
-    .nav-container {
-      top: 40px;
-    }
-    .content-layout {
-      padding: 2em;
-    }
-  }  
-  @media (min-width: $bp-wide) {
-    .content-layout {
-      padding: 2em;
-    }    
+.nav-container {
+  background: transparent;
+  width: 13em;
+}
+
+
+body.partners .sidebar {
+  top: 120px;
+}
+
+body.partners #sub-nav .menu-title {
+  margin-bottom: 10px;
+}
+
+body.partners.has-subnav .content-layout {
+  margin-top: 50px;
+}
+
+@media (min-width: 43.75em){
+  body.partners .embedded-searchbar {
+    width: 90%;
+    max-width: 300px;
+  }
+  header.partners-global-header .header-links a {
+    display: none;
   }
 }
 
-// For search box (copied from PUI v13)
+@media(min-width: $bp-medium) {
+  body.partners.has-subnav .content-layout {
+    margin-top: 50px;
+  }
+}
+
+@media(max-width: $bp-medium) {
+  body.partners.has-subnav .content-layout {
+    margin-top: 50px;
+  }
+}
+
+@media(min-width: 700px) {
+  body.partners .nav-container {
+    top: 85px;
+  }
+}
 
 input:not([type]) {
   display: block;
   width: 100%;
-  height: 32px;
-  padding: 4px 8px;
-  font-size: 14px;
-  background-color: #fff;
-  border: 1px solid #dfe5e8;
+  border: none;
   border-radius: 2px;
   box-shadow: none;
   box-sizing: border-box;
-  color: #243641;
+  color: white;
+  background-color: rgba(0,0,0,.26);
+  font-weight: normal;
+  height: 40px;
+  font-size: 16px;
+  padding: 4px 12px 4px 40px;
+  background-image: url(https://d1fto35gcfffzn.cloudfront.net/images/docs/md-search-white.svg);
+  background-repeat: no-repeat;
+  background-position: 10px 8px;
 }
 
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: rgba(255,255,255,0.8);
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: rgba(255,255,255,0.8);
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: rgba(255,255,255,0.8);
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: rgba(255,255,255,0.8);
+}
 
 @media (min-width: 700px) {
   h2 > a:before,
@@ -632,14 +676,249 @@ input:not([type]) {
     margin: -113px 0 0;
   }
   .nav-container {
-    top: 80px;
+    top: 140px;
   }
 }
- @media (min-width: 993px) {
-  .has-subnav div.nav-container {
-    top: 100px;
+
+.has-subnav .container {
+  max-width: 1235px;
+  margin: 0 auto;
+  position: relative;
+}
+
+/* July 2019 updates */
+
+body {
+  color: $ink;
+}
+
+#container-main {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+#container-main-inner {
+  display: table-row;
+  height: 100%;
+}
+
+h2, .h2 {
+  font-size: 1.6em;
+  font-weight: 300;
+  letter-spacing: -.01em;
+}
+
+.title-container {
+  font-weight: 300;
+}
+
+.content .quick-links {
+  display: none;
+}
+
+.quick-links {
+  background-color: transparent;
+  border-radius: 3px;
+  border: none;
+  display: inline-block;
+  padding: 0;
+  a {
+    border-bottom: none;
+    color: $ink;
+    &:hover {
+      background-color: transparent;
+      border-bottom-style: none;
+      color: $mint;
+    }
+  }
+  ol,ul,li {
+    margin: 0 0 6px;
+    list-style-type: none;
+    font-size: 0.9rem;
+    color: $ink;    
   }
 }
+
+.quick-links > ul:before {
+  display: block;
+  padding-bottom: 8px;
+  font-weight: 700;
+  content: "Table of contents";
+  font-size: 0.9rem;
+}
+
+
+.nav-content {
+  padding: 0 12px 0 6px;
+  li {
+    line-height: 1.1em;
+  }
+  a,span {
+    color: $ink;
+    font-size: 0.9rem;
+    padding: 0 0 10px 16px;
+    border-width: 0;    
+  }
+  .has_submenu {
+    &:before {
+      content: "\f078";
+      margin-top: 4px;
+      font-size: 8px;
+      vertical-align: top;
+    }
+    &.expanded:before {
+      content: "\f077";
+    }
+    & > a,
+    & > span {
+      margin-left: .6em;
+      padding-left: .6em;
+      font-weight: bold;
+    }
+  }
+  .active,
+  .active:hover,
+  .active:focus,
+  a:hover,
+  a:focus,
+  a:active {
+    color: $mint;
+  }
+  .active, .active:hover, .active:focus {
+    background-color: transparent;
+  }
+  @media(max-width: 700px) {
+    a:hover,  a:focus,  a:active {
+      background-color: transparent;
+    }
+  }
+}
+
+
+.sidebar {
+  display: inline-block;
+  vertical-align: top;
+  position: fixed;
+  top: 175px;
+  max-width: 220px;
+  bottom: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+  padding: 0 12px 20px 0;
+  .product-info {
+    margin: 16px 0 0 16px;
+    a {
+      font-size: 0.9rem;
+      &:hover {
+        background-color: rgba(0, 167, 157, 0.08);
+        border-bottom-style: solid;        
+      }
+    }
+  }
+}
+
+@media (min-width: 56.25em) {
+  .has-subnav .container {
+    margin: 0 auto;
+    position: relative;
+  }
+}
+
+@media (min-width: 43.75em) {
+  .has-subnav .container {
+    margin: 0 auto;
+    position: relative;
+  }
+  .nav-container {
+    left: auto;
+    margin: 1.9em 0 1.9em 1em;
+    padding: 0;
+  }
+}
+
+@media(max-width: 1200px) {
+  .has-subnav .content-layout {
+    max-width: 42em;
+  }
+}
+
+@media(max-width: 1100px) {
+  .has-subnav .content-layout {
+    max-width: 40em;
+  }
+}
+
+@media(max-width: 1053px) {
+  .has-subnav .content-layout {
+    margin-left: 14em;
+    max-width: 35em;
+  }
+}
+
+@media(max-width: $bp-medium) {
+  .nav-container {
+    top: 40px;
+  }
+  .has-subnav .content-layout {
+    max-width: 100%;
+  }
+  .content .quick-links {
+    display: block;
+    ul {
+      padding: 10px 0 30px;
+      ul {
+        padding: 0 0 0 1.8em;
+      }
+    }
+  }
+  .sidebar {
+    display: none;
+  }
+}
+
+@media(max-width: 700px) {
+  .nav-container {
+    width: auto;
+    background: #f8f8f8;
+  }
+  .has-subnav .content-layout {
+    margin-left: 0;
+    max-width: 100%;
+  }
+  .sidenav-title {
+    border-top: 1px solid #f8f8f8;
+    padding: 0.5em;
+  }
+  .sidenav-title:hover, .active .sidenav-title {
+    background-color: $mint;
+    color: #fff;
+    cursor: pointer;
+    border-top: 1px solid white;
+    opacity: 0.8;
+  }
+  .active .nav-content {
+    padding-bottom: 1em;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
