--- a/source/stylesheets/partials/_header.scss
+++ b/source/stylesheets/partials/_header.scss
@@ -56,7 +56,6 @@ Add <code>.header-layout</code> to header tag to get fixed positioning.
   @include clearfix;
 }
 .header a {
-  color: #fff;
   display: inline-block;
 }
 .header img {
@@ -165,7 +164,7 @@ category: basics
   border-bottom-color: $gray2;
   border-style: dotted;
   border-width: 0 0 1px;
-  color: #fff;
+  // color: #fff;
   display: block;
   padding: 0.5em 0;
   @media (min-width: $bp-wide) {
@@ -311,9 +310,6 @@ category: basics
   margin-left: 0.5em;
   margin-top: 0.04em;
   position: relative;
-  // @media (min-width: $bp-wide) {
-  //   display: none;
-  // }
 }
 .header-dropdown:hover .header-dropdown-content {
   display: block;
@@ -326,10 +322,10 @@ category: basics
 }
 .header-dropdown-link:after {
   @extend .fa;
-  color: $color-bg-dark;
+  color: white;
   content: $fa-var-caret-down;
   font-size: 0.8em;
-  padding-left: 0.2em;
+  padding-left: 10px;
 }
 .header-dropdown:hover {
   @include border-bottom-radius(0);
@@ -352,7 +348,7 @@ category: basics
   display: block;
   padding-left: 0.9em;
   &:hover {
-    @include contrasted($color-accent-bright);
+    background-color: transparent;
   }
 }
 .header-dropdown-content ol,
