--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -914,6 +914,65 @@ h2, .h2 {
   }
 }
 
+/* Aug 2019 Updates */
+body[class*=__index] header.header-home-global {
+  background: transparent;
+  padding: 0;
+  color: black;
+}
+
+body[class*=__index] header.global-header #info-search-bar {
+  display: none;
+}
+
+body[class*=__index] {
+  @media(max-width: 993px) {
+    header.global-header #info-search-bar,
+    .super-nav {
+      display: block;
+    }
+    header.header-home-global {
+      padding: 3em 1em 0;
+    }
+    .content-layout {
+      padding-top: 1em;
+    }
+    form#search-home {
+      margin-bottom: 40px;
+    }
+    header.global-header .pivotal-logo {
+      max-width: 100%;
+      width: auto;
+    }
+    header.global-header .header-links a,
+    .btn-menu:before {
+      color: #00253e;
+    }
+    header.global-header .super-nav {
+      display: block;
+    }
+    header.global-header .super-nav .global-header-title {
+      float: none;
+    }
+    header.global-header #info-search-bar {
+      background-color: white;
+      min-height: 0;
+    }
+    header.global-header .menu-active .mobile-only .header-item#docs-header-item {
+      display: none;
+    }
+    .btn-menu {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
+  @media (max-width: 700px) {
+    header.global-header .mobile-only, header.global-header .btn-menu {
+      padding: 0;
+    }
+  }
+}
 
 
 
