--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -705,12 +705,17 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight:300;
+  margin-top: 20px;
 }
 
 h2, .h2 {
   font-size: 1.6em;
   font-weight: 300;
   letter-spacing: -.01em;
+}
+
+h3, .h3  {
+   font-size: 1.2em;
 }
 
 .title-container {
