--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -587,7 +587,7 @@ hr {
       vertical-align: top;
       margin-left: 15em;
       margin-top: 110px;
-      max-width: 48em;
+      max-width: 48vw;
     }
   }
 }
