Add back pre-content partial [#168554000]

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -50,6 +50,7 @@
           <div class="to-top" id="js-to-top">
             <a href="#top" title="back to top"></a>
           </div>
+          <%= partial 'layouts/pre-content' %>
           <%= yield %>
           <%= partial 'layouts/page-footer' %>
           <footer class="site-footer-links">
