--- a/source/javascripts/page_initializers/documentation.js.erb
+++ b/source/javascripts/page_initializers/documentation.js.erb
@@ -12,6 +12,20 @@ $(function () {
 	}
 });
 
+
+// MANUAL ToC REPLACEMENT
+// If you create a table of contents with the class 'quick-links'
+// in the body of your page, it replaces the automatic table of
+// contents whereever it appears
+$(function() {
+  $('#js-quick-links .quick-links').each(function() {
+    $(this).replaceWith($('main > .quick-links').clone());
+  })
+  $('main > .quick-links').remove();
+});
+
+
+
 // NAVIGATION
 $(function() {
     // Smooth scrolling for all jump links
