--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -43,7 +43,7 @@
           <a id="top"></a>
           <%= partial 'layouts/title' %>
           <% if quick_links %>
-            <div id="js-quick-links" <%= 'class="list-style-none"' if current_page.data.list_style_none %>>
+            <div class="js-quick-links<%= ' list-style-none' if current_page.data.list_style_none %>">
               <%= quick_links %>
             </div>
           <% end %>
@@ -59,7 +59,7 @@
         </main>
         <div class='sidebar'>
           <% if quick_links %>
-            <div id="js-quick-links" <%= 'class="list-style-none"' if current_page.data.list_style_none %>>
+            <div class="js-quick-links<%= ' list-style-none' if current_page.data.list_style_none %>">
               <%= quick_links %>
             </div>
           <% end %>
