--- a/source/stylesheets/partials/_local-header.scss
+++ b/source/stylesheets/partials/_local-header.scss
@@ -26,7 +26,7 @@
   img {
     height: auto;
     width: auto;
-    margin: 0;
+    margin: 0 !important;
     position: absolute;
     top: 50%;
     left: 50%;
