--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,11 +8,16 @@
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400italic,400,600' rel='stylesheet' type='text/css'>
   <!-- Use title if it's in the page YAML frontmatter -->
   <title>
-    <% if current_page.data.title %>
+    <% if current_page.data.meta_title %>
+      <%= current_page.data.meta_title %> |
+    <% elsif current_page.data.title %>
       <%= current_page.data.title %> |
     <% end %>
     <%= vars.book_title_short %>
   </title>
+  <% if current_page.data.meta_description %>
+    <meta name="description" content="<%= current_page.data.meta_description %>">
+  <% end %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag 'all', :media => 'screen, print' %>
   <%= stylesheet_link_tag 'print', :media => 'print' %>
@@ -51,7 +56,9 @@
             <a href="#top" title="back to top"></a>
           </div>
           <%= partial 'layouts/pre-content' %>
+          <div id="topic-content">
           <%= yield %>
+          </div>
           <%= partial 'layouts/page-footer' %>
           <footer class="site-footer-links">
             <%= partial 'layouts/book-footer' %>
