--- a/source/stylesheets/partials/_layout-vars.scss
+++ b/source/stylesheets/partials/_layout-vars.scss
@@ -5,8 +5,8 @@ $bluegray1: #4b6475;
 $teal1: #03786D;
 $teal2: #00a79d;
 $ink: #00253e;
-$mint: #00A390;
-$mint2: #00b5a3;
+$mint: #314351;
+$mint2: #314351;
 
 // ~COLORS
 // ===================================================
