update copyright on doc sites [#171372524]

--- a/source/layouts/_book-footer.erb
+++ b/source/layouts/_book-footer.erb
@@ -4,8 +4,7 @@
   <div id="teconsent"></div>
 
   <br/>
-  <a href='/'>Pivotal Documentation</a>
-  &copy; <%= Time.now.year %> <a href='https://pivotal.io' target="_blank">Pivotal Software</a>, Inc. All Rights Reserved.
+  Copyright &copy; <%= Time.now.year %> <a href='https://vmware.com' target="_blank">VMware</a>, Inc. or its affiliates. All Rights Reserved.
   <br/>
   <br/>
 </div>
