trying something out for partners [#171373588]

--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -235,12 +235,12 @@ header.partners-global-header {
   }
 
   .pivotal-logo {
-    background-image: url(/images/icon-p-green.jpg);
+    background-image: url(https://d1fto35gcfffzn.cloudfront.net/images/docs/logo-tanzu-docs.svg);
     background-repeat: no-repeat;
     background-position: center left;
     background-size: 100%;
-    height: 66px;
-    width: 66px;
+    /* height: 66px;
+    width: 66px; */
   }
 
   .global-header-title {
