--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -235,7 +235,7 @@ header.partners-global-header {
   }
 
   .pivotal-logo {
-    background-image: url(https://d1fto35gcfffzn.cloudfront.net/images/docs/logo-tanzu-docs.svg);
+    background-image: url(/images/logo-tanzu-docs.svg);
     background-repeat: no-repeat;
     background-position: center left;
     background-size: 100%;
