--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -222,19 +222,25 @@ header.partners-global-header {
     vertical-align: middle;
   }
 
-  @media(min-width: 43.75em) {
+  @media(max-width: 400px) {
     line-height: 40px;
     .pivotal-logo {
-      height: 38px;
-      max-width: 233px;
-      margin: 8px 17px 10px 0;
-    }
+      display: none;
     }
   }
 
   > a, .header-item {
     font-size: 18px;
     vertical-align: top;
+  }
+
+  .pivotal-logo {
+    background-image: url(/images/logo-tanzu-docs.svg);
+    background-repeat: no-repeat;
+    background-position: center left;
+    background-size: 100%;
+    /* height: 66px;
+    width: 66px; */
   }
 
   .global-header-title {
