--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -229,6 +229,7 @@ header.partners-global-header {
       max-width: 233px;
       margin: 8px 17px 10px 0;
     }
+    }
   }
 
   > a, .header-item {
