Revert "trying for partners again [#171373588]"
This reverts commit 9c817c8a2a35fb954d0706bcdeb59a591460c1b7.

--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -235,10 +235,12 @@ header.partners-global-header {
   }
 
   .pivotal-logo {
-    background-image: url(/images/TanzuDocs.jpg);
+    background-image: url(/images/icon-p-green.jpg);
     background-repeat: no-repeat;
     background-position: center left;
     background-size: 100%;
+    height: 66px;
+    width: 66px;
   }
 
   .global-header-title {
