--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -1,4 +1,4 @@
-pa@import "font-awesome/variables";
+@import "font-awesome/variables";
 @import "font-awesome/core";
 @import "font-awesome/path";
 
