font weight update

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -1011,6 +1011,10 @@ header.partners-global-header .pivotal-logo {
     width: 50px;
 }
 
+header.partners-global-header .global-header-title {
+    font-weight: 400;
+}
+
 .nav-content .active, .nav-content .active:hover, .nav-content .active:focus, .nav-content a:hover, .nav-content a:focus, .nav-content a:active {
     color: #1D428A;
 }
