--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -48,7 +48,7 @@
 
 
 <% if vars.use_global_header && current_page.data.owner != "Pivotal HD" %>
-<div class="edge-banner" ><a href="https://docs-pcf-staging.cfapps.io/pivotalcf/installing/report-issue.html">PRE-RELEASE DOCUMENTATION<br>Please do not distribute outside the Pivotal Early Access Program. Click here to learn how to report an issue or feature enhancement with this early access release.</a></div> 
+<div class="edge-banner">PRE-RELEASE DOCUMENTATION<br>Please do not distribute.</div> 
   <% if current_page.path.include? "partners" %>
   <header class="partners-global-header header header-layout js-bar-links">
     <div class='container'>
