actually fix the font color

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -4,7 +4,7 @@
     background-color: #bf1919;
     display: flex;
     font-size: .75em;
-    font-color: #ffffff;
+    color: #ffffff;
     font-weight: bold;
     line-height: 1.5;
     text-align: center;
