reduce weight for non-submenu subnav links

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -1033,3 +1033,7 @@ a, .link, .quick-links a {
 .quick-links a {
   font-weight: normal;
 }
+
+.nav-content a, .nav-content span {
+  font-weight:normal
+}
