--- a/source/layouts/_local-header.erb
+++ b/source/layouts/_local-header.erb
@@ -3,6 +3,9 @@
     <div class="local-header local-title clearfix">
       <div class='img-container'><img src="<%= product_info['local_header_img'] %>"></div>
       <span class="local-header-title"><%= product_info['local_header_title'] %></span>
+      <% if product_info['skip_versioning'] %>
+
+      <% else %>
       <span onClick="return true" class="local-header local-version header-dropdown">
         <a class="local-header header-dropdown-link">v<%= product_info['local_product_version'] || product_info['latest_stable_version'] %></a>
         <span class="local-header header-dropdown-content">
@@ -21,7 +24,7 @@
           </ul>
         </span>
       </span>
-
+      <% end %>
       <!-- search was here -->
     </div>
   </div>
