update color of to-top button

--- a/source/stylesheets/layout-styles.scss
+++ b/source/stylesheets/layout-styles.scss
@@ -1037,3 +1037,5 @@ a, .link, .quick-links a {
 .nav-content a, .nav-content span {
   font-weight:normal
 }
+
+.to-top a:before {background: #1D428A;}
