--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -38,7 +38,7 @@
   <header class="global-header header header-layout js-bar-links">
     <div class='super-nav'>
       <div class='container-modified'>
-        <a href="/" class="global-header-title">
+        <a href="https://docs.pivotal.io" class="global-header-title">
           <img class="pivotal-logo" src="https://d1fto35gcfffzn.cloudfront.net/images/docs/logo-docs.svg">
         </a>
         <div class='header-links'>
