updates header and footer links [#172389474]

--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -43,13 +43,13 @@
         </a>
         <div class='header-links'>
            <div class="header-item">
-            <a href="https://pivotal.io/support">Support</a>
+            <a href="https://tanzu.vmware.com/support">Support</a>
           </div>
           <div class="header-item">
             <a href="https://network.pivotal.io">Downloads</a>
           </div>
           <div class='header-item' id='contact-header-item'>
-            <a href='https://pivotal.io/contact'>Contact Us</a>
+            <a href='https://tanzu.vmware.com/contact'>Contact Us</a>
           </div>
           <div class='header-item'>
             <a href="https://login.run.pivotal.io">Sign In</a>
@@ -84,10 +84,10 @@
             <a href="https://network.pivotal.io">Downloads</a>
           </div>
           <div class="header-item">
-            <a href="https://pivotal.io/support">Support</a>
+            <a href="https://tanzu.vmware.com/support">Support</a>
           </div>
           <div class='header-item' id='contact-header-item'>
-            <a href='https://pivotal.io/contact'>Contact Us</a>
+            <a href='https://tanzu.vmware.com/contact'>Contact Us</a>
           </div>
           <div class='header-item'>
             <a href="https://login.run.pivotal.io">Sign In</a>
