--- a/source/layouts/_book-footer.erb
+++ b/source/layouts/_book-footer.erb
@@ -1,6 +1,6 @@
 <div class="copyright">
-  <a href='https://pivotal.io/privacy-policy'  target="_blank">Privacy Policy</a> | 
-  <a href='https://pivotal.io/terms-of-use'  target="_blank">Terms of Use</a>
+  <a href='https://www.vmware.com/help/privacy.html'  target="_blank">Privacy Policy</a> | 
+  <a href='https://www.vmware.com/help/legal.html'  target="_blank">Terms of Use</a>
   <div id="teconsent"></div>
 
   <br/>
@@ -9,6 +9,6 @@
   <br/>
 </div>
 <div class="support">
-  Need help? <a href="<%=vars.support_url%>" target="_blank">Visit Support</a>
+  Need help? <a href="https://tanzu.vmware.com/support" target="_blank">Visit Support</a>
 </div>
 
