--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -36,6 +36,27 @@
     </div>
   <% else %>
   <header class="global-header header header-layout js-bar-links">
+    <div class='super-nav'>
+      <div class='container-modified'>
+        <a href="https://docs.pivotal.io" class="global-header-title">
+          <img class="pivotal-logo" src="https://d1fto35gcfffzn.cloudfront.net/images/docs/logo-docs.svg">
+        </a>
+        <div class='header-links'>
+           <div class="header-item">
+            <a href="https://tanzu.vmware.com/support">Support</a>
+          </div>
+          <div class="header-item">
+            <a href="https://network.pivotal.io">Downloads</a>
+          </div>
+          <div class='header-item' id='contact-header-item'>
+            <a href='https://tanzu.vmware.com/contact'>Contact Us</a>
+          </div>
+          <div class='header-item'>
+            <a href="https://login.run.pivotal.io">Sign In</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div id='info-search-bar'>
       <div class='container-modified'>
         <%= partial 'layouts/local-header' %>
@@ -54,6 +75,24 @@
             <gcse:searchbox></gcse:searchbox>
           <% end %>
         </div>
+        <div class="btn-menu" data-behavior="MenuMobile"></div>
+        <div class='header-links mobile-only'>
+          <div class="header-item" id='docs-header-item'>
+            <a href='https://docs.pivotal.io'>All docs</a>
+          </div>
+          <div class="header-item">
+            <a href="https://network.pivotal.io">Downloads</a>
+          </div>
+          <div class="header-item">
+            <a href="https://tanzu.vmware.com/support">Support</a>
+          </div>
+          <div class='header-item' id='contact-header-item'>
+            <a href='https://tanzu.vmware.com/contact'>Contact Us</a>
+          </div>
+          <div class='header-item'>
+            <a href="https://login.run.pivotal.io">Sign In</a>
+          </div>
+
           <div class="header-item embedded-searchbar">
             <% if elastic_search? %>
               <form method="get" action="/search">
