--- a/source/stylesheets/partials/_local-header.scss
+++ b/source/stylesheets/partials/_local-header.scss
@@ -129,7 +129,7 @@
   float: none;
   font-size: initial;
   padding: 0;
-  background-color: $mint2;
+  background-color: #243640;
   border: none;
   box-shadow: 0 6px 12px rgba(0,0,0,.175);
   li {
