--- a/source/layouts/_book-footer.erb
+++ b/source/layouts/_book-footer.erb
@@ -1,14 +1,5 @@
-<div class="copyright">
-  <a href='https://www.vmware.com/help/privacy.html'  target="_blank">Privacy Policy</a> | 
-  <a href='https://www.vmware.com/help/legal.html'  target="_blank">Terms of Use</a>
-  <div id="teconsent"></div>
 
-  <br/>
-  Copyright &copy; <%= Time.now.year %> <a href='https://vmware.com' target="_blank">VMware</a>, Inc. or its affiliates. All Rights Reserved.
-  <br/>
-  <br/>
-</div>
 <div class="support">
-  Need help? <a href="https://tanzu.vmware.com/support" target="_blank">Visit Support</a>
+  Need help? <a href="https://greenplum.org/community/" target="_blank">Visit the Greenplum Database Community</a>
 </div>
 
