--- a/source/layouts/_book-footer.erb
+++ b/source/layouts/_book-footer.erb
@@ -1,7 +1,8 @@
 <div class="copyright">
   <a href='https://www.vmware.com/help/privacy.html'  target="_blank">Privacy Policy</a> | 
-  <a href='https://www.vmware.com/help/legal.html'  target="_blank">Terms of Use</a>
-  <div id="teconsent"></div>
+  <a href='https://www.vmware.com/help/legal.html'  target="_blank">Terms of Use</a> | 
+	<a href="https://www.vmware.com/help/privacy/california-privacy-rights.html">Your California Privacy Rights</a> | 
+	<a class="ot-sdk-show-settings">Cookie Settings</a>
 
   <br/>
   Copyright &copy; <%= Time.now.year %> <a href='https://vmware.com' target="_blank">VMware</a>, Inc. or its affiliates. All Rights Reserved.
