Change order of JS scripts for jQuery [#178153278]

--- a/source/layouts/_additional-scripts.erb
+++ b/source/layouts/_additional-scripts.erb
@@ -1,7 +1,8 @@
+
 <!-- OneTrust Cookie Consent -->
 <meta content='e93ee0e6-421d-4682-be59-b4c51c8070ce' name='onetrust-data-domain'>
 <meta content='https://tags.tiqcdn.com/utag/vmware/microsites-privacy/prod/utag.js' name='microsites-utag'>
-<script src="/javascripts/vendor/jquery-1.9.1.js"></script>
+<script src="https://docs.pivotal.io/javascripts/vendor/jquery-1.9.1.js"></script>
 <script src='//www.vmware.com/files/templates/inc/utag_data.js'></script>
 <script src='//tags.tiqcdn.com/utag/vmware/microsites-privacy/prod/utag.sync.js'></script>
 <script>function OptanonWrapper() { { window.dataLayer.push({ event: 'OneTrustGroupsUpdated' }); } }</script>
