--- a/source/stylesheets/partials/_global-header.scss
+++ b/source/stylesheets/partials/_global-header.scss
@@ -45,7 +45,7 @@ header.global-header {
   }
 
   #info-search-bar {
-    background-color: #243640;
+    background-color: #7FBE42;
     @media(max-width: $bp-medium) {
       min-height: 45px;
     }
