--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -38,10 +38,23 @@
   <header class="global-header header header-layout js-bar-links">
     <div class='super-nav'>
       <div class='container-modified'>
-        <a href="/" class="global-header-title">
-          <img class="pivotal-logo" src="https://d1fto35gcfffzn.cloudfront.net/images/docs/logo-tanzu-docs.svg">
+        <a href="https://docs.pivotal.io" class="global-header-title">
+          <img class="pivotal-logo" src="https://d1fto35gcfffzn.cloudfront.net/images/docs/logo-docs.svg">
         </a>
-        <%= partial 'layouts/header-links' %>
+        <div class='header-links'>
+           <div class="header-item">
+            <a href="https://tanzu.vmware.com/support">Support</a>
+          </div>
+          <div class="header-item">
+            <a href="https://network.pivotal.io">Downloads</a>
+          </div>
+          <div class='header-item' id='contact-header-item'>
+            <a href='https://tanzu.vmware.com/contact'>Contact Us</a>
+          </div>
+          <div class='header-item'>
+            <a href="https://login.run.pivotal.io">Sign In</a>
+          </div>
+        </div>
       </div>
     </div>
     <div id='info-search-bar'>
