add noindex to meta data on each page for outdated docs

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,6 +4,8 @@
   <%= partial 'layouts/additional-scripts' %>
   <meta name="google-site-verification" content="erNoOcm-YbKIXu8GnFV2H6KXw-w8QxUMoN6ujVz-ftc" />
   <meta charset="utf-8">
+  <!--  Direct search engine web crawlers to skip indexing all pages of this book -->
+  <meta name="robots" content="noindex">
   <!-- Always force latest IE rendering engine or request Chrome Frame -->
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
   <%= vars.html_head_meta %>
