--- a/source/layouts/_header.erb
+++ b/source/layouts/_header.erb
@@ -39,7 +39,7 @@
     <div class='super-nav'>
       <div class='container-modified'>
         <a href="/" class="global-header-title">
-          <img class="pivotal-logo" src="https://d1fto35gcfffzn.cloudfront.net/images/docs/logo-tanzu-docs.svg">
+          <img class="pivotal-logo" src="https://docs.pivotal.io/images/VMware-by-Broadcom-Logo_color.svg">
         </a>
         <%= partial 'layouts/header-links' %>
       </div>
