Update copyright notice

--- a/source/layouts/_book-footer.erb
+++ b/source/layouts/_book-footer.erb
@@ -5,7 +5,7 @@
 	<a class="ot-sdk-show-settings">Cookie Settings</a>
 
   <br/>
-  Copyright &copy; <%= Time.now.year %> <a href='https://vmware.com' target="_blank">VMware</a>, Inc. or its affiliates. All Rights Reserved.
+  Copyright &copy; 2005-<%= Time.now.year %> Broadcom. All Rights Reserved. The term “Broadcom” refers to Broadcom Inc. and/or its subsidiaries.
   <br/>
   <br/>
 </div>
